@@ -1,0 +1,8 @@
+String[] a
+int[] a
+double[] a
+long[] a
+boolean[] a
+float[] a
+Object[] a
+Object[] a
