@@ -1,0 +1,16 @@
+Object[] a
+Object[] a
+Object[] a: class [Ljava.lang.Float;
+a[0] - 1.0 - class java.lang.Float
+a[1] - 2.0 - class java.lang.Float
+Object[] a: class [Ljava.lang.Short;
+a[0] - 1 - class java.lang.Short
+a[1] - 2 - class java.lang.Short
+Object[] a: class [Ljava.lang.Float;
+a[0] - 1.0 - class java.lang.Float
+a[1] - 2.0 - class java.lang.Float
+a[2] - 3.0 - class java.lang.Float
+a[3] - 0.0 - class java.lang.Float
+Object a
+int[] a
+Warning: 2 at 1 is not compatible with java.lang.Long at convertds4.sl:18
